tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-northeast-3/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-2159c749",
                    "NetworkAclId": "acl-7558221c",
                    "SubnetId": "subnet-33876748"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-2259c74a",
                    "NetworkAclId": "acl-7558221c",
                    "SubnetId": "subnet-1e12d477"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-2359c74b",
                    "NetworkAclId": "acl-7558221c",
                    "SubnetId": "subnet-647ede29"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "172.227.123.61/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-7558221c",
            "OwnerId": "167389268608",
            "Tags": [],
            "VpcId": "vpc-95d8affc"
        }
    ]
}
