tests/knowledge/context/drift/aws/live_env_test/another/account-data-for-drift/cloudrail-develop/ap-northeast-3/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "AssociationState": {
                        "State": "associated"
                    },
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-a01453c9",
                    "RouteTableId": "rtb-84703bed"
                }
            ],
            "OwnerId": "167389268608",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-84703bed",
            "Routes": [
                {
                    "DestinationCidrBlock": "6.168.104.159/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "172.227.123.61/0",
                    "GatewayId": "igw-ca088aa3",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-95d8affc"
        }
    ]
}
